--- a/3/WebContent/login.css
+++ b/3/WebContent/login.css
@@ -3,11 +3,29 @@
 	background:#8488fe
 }*/
 body {
-  background: url("images/bg-blue.png") repeat;
+	background: url('images/5-13032Q02521.png') repeat;
 }
-#header {
-  background: url("images/bg-title-blue.png") no-repeat center -81px;
+/*#header {
+  background: url('images/bg-title-blue.png') no-repeat center -81px;
   height: 140px;
+}*/
+
+.loginwarrp1{
+	margin: 130px auto;
+    width: 400px;
+    padding: 30px 50px;
+    background: #8488fe;
+    overflow: hidden;
+    font-size: 14px;
+    font-family: '微软雅黑','文泉驿正黑','黑体';
+}
+.loginwarrp1.logo{
+	width:100%;
+	height:44px;
+	line-height: 44px;
+	font-size: 20px;
+	text-align: center;
+	border-bottom:1px solid #ddd;
 }
 .loginwarrp{
 	margin: 130px auto;
