--- a/3/WebContent/login.css
+++ b/3/WebContent/login.css
@@ -9,7 +9,15 @@ body {
   background: url('images/bg-title-blue.png') no-repeat center -81px;
   height: 140px;
 }*/
+.threed{
+color: transparent;
+background-color : black;
+text-shadow : rgba(255,255,255,0.5) 0 5px 6px, rgba(255,255,255,0.2) 1px 3px 3px;
+-webkit-background-clip : text;
+font-size: 60px;
+font-family: '微软雅黑','文泉驿正黑','黑体';
 
+}
 .loginwarrp1{
 	margin: 130px auto;
     width: 400px;
